--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "bonkwatcher",
+  "name": "bonk-watcher",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "axios": "^1.6.0"
+  }
 }
