--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bonk-watcher",
   "version": "1.0.0",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
